Sequelize has been added

--- a/env.yaml
+++ b/env.yaml
@@ -1,25 +1,22 @@
 base:
   LOG_LEVEL: debug
   EMIT_STACK_TRACE: false
+  DB_HOST: 127.0.0.1
+  DB_USERNAME: root
+  DB_PASSWORD: Scriptiger.8421
+  DB_NAME: koaDB
+  DB_DIALECT: mysql
+  DB_SYNC: false
 
-# Development environment.
 development:
   ~compose: base
-  # Port to use
   PORT: 5000
-  # In development it can be useful to get the error stack.
   EMIT_STACK_TRACE: true
 
-# Running tests
-test:
-  # Test environment is based on development.
-  ~compose: development
-  # Disable logging for tests
-  LOG_LEVEL: off
-
-# Production environment.
 production:
-  # Production environment is based on development.
   ~compose: base
-  # Port to use
   PORT: 3030
+
+test:
+  ~compose: development
+  LOG_LEVEL: off
