--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "koa-respond": "^2.1.0",
     "koa-router": "^7.4.0",
     "lodash": "^4.17.11",
+    "mysql2": "^1.6.4",
     "palin": "^2.2.0",
+    "sequelize": "^4.41.2",
     "yenv": "^2.1.0"
   },
   "devDependencies": {
@@ -71,9 +73,7 @@
   },
   "eslintConfig": {
     "parser": "babel-eslint",
-    "plugins": [
-      "jest"
-    ],
+    "plugins": [],
     "extends": [
       "standard",
       "prettier"
