Validation JWT and Auth middleware added

--- a/env.yaml
+++ b/env.yaml
@@ -7,6 +7,8 @@ base:
   DB_NAME: koaDB
   DB_DIALECT: mysql
   DB_SYNC: false
+  JWT_SECRET: LoLiStHatAsEcreT?
+  JWT_EXPIRE_IN: 43200
 
 development:
   ~compose: base
