--- a/package.json
+++ b/package.json
@@ -35,12 +35,17 @@
   ],
   "dependencies": {
     "@koa/cors": "^2.2.2",
+    "bcrypt-nodejs": "0.0.3",
     "bristol": "^0.4.0",
+    "fejl": "^1.0.2",
     "http-status-codes": "^1.3.0",
+    "jsonwebtoken": "^8.4.0",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
     "koa-combine-routers": "^4.0.2",
     "koa-compress": "^3.0.0",
+    "koa-jwt": "^3.5.1",
+    "koa-req-validator": "^1.0.0",
     "koa-respond": "^2.1.0",
     "koa-router": "^7.4.0",
     "lodash": "^4.17.11",
